# async-crawler

./: Dockerfile  README.md  async-crawler.drawio  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: crawler.py  main.py  status.py  tasks.py  utils.py  webpage.py
